<resources>
    <string name="app_name">My weather App</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feelsLikeDescription">Feels like %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d%%</string>
    <string name="presure">Pressure %1$d hPa</string>
    <string name="forecast_button">Forecast</string>
    <string name="forecast_temp">Temp: %.1f°</string>
    <string name="forecast_high">High: %.1f°</string>
    <string name="forecast_low">Low: %.1f°</string>
    <string name="forecast_sunrise">Sunrise: %s</string>
    <string name="forecast_sunset">Sunset: %s</string>
    <string name="ok">ok</string>
    <string name="submit_error_dialog">error fetching data</string>
    <string name="location_rationale">enable location services to get weather at your current location</string>
</resources>