<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_paul_mn"
        android:layout_margin="12dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="75sp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="15dp"
        android:text="@string/temperature"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/currentIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="@id/temperature"
        app:layout_constraintBottom_toBottomOf="@id/temperature"
        app:layout_constraintLeft_toRightOf="@id/temperature"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/feelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feelsLikeDescription"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/temperature"/>
    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/feelsLike"
        app:layout_constraintStart_toStartOf="@id/temperature"/>
    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/low"
        app:layout_constraintStart_toStartOf="@id/temperature"/>
    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/high"
        app:layout_constraintStart_toStartOf="@id/temperature"/>
    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presure"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/humidity"
        app:layout_constraintStart_toStartOf="@id/temperature"/>
    <Button
        android:id="@+id/currentConditionsButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/grey"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:text="@string/forecast_button"
        app:layout_constraintTop_toBottomOf="@id/pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>